# crypto_model

./: README.md  crypto_model.ipynb  crypto_price_machine_learning_model.ipynb  pyproject.toml
machine_learning_template/: dataset_loading.py  utils.py
