[tool.poetry]
name = "crypto_model"
version = "0.1.0"
description = "crypto price prediction machine learning model"
authors = ["vincebarokie <vincebarokie@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
pandas = "^1.4.2"
numpy = "^1.22.4"
sklearn = "^0.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
autoimpute = "^0.12.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
